--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <h1>Fullstack Experiments</h1>
     <div class="links">
       <a href="exp1.html">Experiment 1.1</a>
-      <a href="exp1_2..html">Experiment 1.2</a>
+      <a href="exp1_2.html">Experiment 1.2</a>
       <a href="EXP1_3.html">Experiment 1.3</a>
     </div>
   </div>
 </body>
+
 </html>
